...
	},
	"cartSummary": {
		"txtSubtotal": "Subtotal",
		"txtDiscount": "Desconto",
		"txtDelivery": "Entrega",
		"txtTotal": "Total",
		"labelFinish": "Finalizar Compra"
	},
	"minimumOrderValue": {
		"missing": "Adicione {{value}} para atingir o valor mínimo",
		"reached": "Valor mínimo da compra atingido"
	},
	"coupon": {
...
