...
		"title": "Status do pedido"
	},
	"appVersion": {
		"label": "versão {{version}}"
	},
	"productCard": {
		"snackAdded": "adicionado à sacola com sucesso",
		"removedFromCart": "produto removido da sacola",
		"viewCart": "Ver sacola",
		"buy": "Comprar"
	},
	"savedCards": {
		"title": "Meus Cartões",
...
